--- a/src/app/home/control-panel/user-group/user-group.component.html
+++ b/src/app/home/control-panel/user-group/user-group.component.html
@@ -4,7 +4,7 @@
     <div class="text-secondary mt-2">Processing...</div>
   </div>
 </div>
-<div class="group-page d-flex flex-column bg-light">
+<div class="group-page d-flex flex-column bg-light-gray">
   <div class="options d-flex justify-content-between align-items-center w-100 px-4">
     <div class="font-xxl">
       <span class="fw-600 mr-2">Groups</span>
@@ -22,7 +22,7 @@
   <div class="scroll-pane">
     <div class="list-group mx-4 mb-4">
       <div class="list-group-item header py-0 bg-light text-secondary text-uppercase">
-        <div class="d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center justify-content-between h-100">
           <div class="group-name">Group Name</div>
           <div class="d-flex align-items-center">
             <div class="group-users-count">Users</div>
