--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,7 +31,7 @@
                 <label style="margin-top: 20px">Email</label>
                 <input
                   type="text"
-                  class="form-control input-text"
+                  class="form-control form-control-lg input-text"
                   formControlName="username"
                   id="username"
                   #usernameControl
@@ -41,7 +41,7 @@
                 <label style="margin-top: 20px">Password</label>
                 <input
                   type="password"
-                  class="form-control input-text"
+                  class="form-control form-control-lg input-text"
                   formControlName="password"
                   id="password"
                   #password
@@ -52,7 +52,7 @@
                 <!-- <a href="#" class="text-secondary">Forgot your Password?</a> -->
                 <button
                   type="button"
-                  class="btn btn-primary login-button input-text"
+                  class="btn btn-lg btn-primary input-text"
                   (click)="onSubmit($event)"
                   style="margin-top: 20px"
                 >
