--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -8,22 +8,20 @@
   <!-- <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb> -->
   <div class="options d-flex justify-content-between align-items-center w-100">
     <div class="fw-600 font-xxl">Data Services</div>
-    <odp-search-box (enteredText)="search($event)" (reset)="resetSearch(); getServices()"></odp-search-box>
-    <div>
-      <button type="button" id="data-management" class="ds-settings btn btn-outline-secondary mr-3"
+    <div class="d-flex align-items-center">
+      <odp-search-box (enteredText)="search($event)" (reset)="resetSearch(); getServices()"></odp-search-box>
+      <button type="button" id="data-management" class="btn btn-outline-light border ml-3"
         [routerLink]="['settings']" *ngIf="isAppAdmin || isSuperAdmin">
-        <i class="fa fa-md fa-cog" aria-hidden="true"></i>
+        <span class="fa fa-cog text-secondary"></span>
       </button>
-      <div class="btn-group">
-        <button type="button" class="btn btn-dark" (click)="toggleImportWizard=true">
-          <span class="fa fa-upload"></span>
-        </button>
-        <button type="button" id="addNewDS" class="add-new btn-min-width btn btn-primary" (click)="newService()"
-          *ngIf="hasCreatePermission('SM')">
-          <span class="fa fa-plus mr-2"></span>
-          <span class="text">Data Service</span>
-        </button>
-      </div>
+      <button type="button" class="btn btn-outline-light border ml-3" (click)="toggleImportWizard=true">
+        <span class="fa fa-upload text-secondary"></span>
+      </button>
+      <button type="button" id="addNewDS" class="add-new btn btn-primary ml-3" (click)="newService()"
+        *ngIf="hasCreatePermission('SM')">
+        <span class="fa fa-plus"></span>
+        <!-- <span class="text">Data Service</span> -->
+      </button>
     </div>
   </div>
   <div class="d-flex flex-column w-100  position-relative">
