--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members.component.scss
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members.component.scss
@@ -1,75 +1,12 @@
-.wrapper{
-    min-height: calc(100vh - 224px);
-    // height: calc(100vh - 337px);
-    // max-height: calc(100vh - 316px);
-    // overflow-y: auto;
-}
-.overlay{
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.4);
-    z-index: 5;
-}
-.browse-users,
-.user-options{
-    left: 0;
-    z-index: 6;
-    transition: 0.25s;
-}
-.browse-users{
-    min-height: 400px;
-    max-height: 400px;
-    bottom: -400px;
-    &.show{
-        bottom: 0;
-    }
-}
-.user-options{
-    min-height: 70px;
-    max-height: 70px;
-    box-shadow: 0px 0px 5px rgba($color: #000000, $alpha: 0.4);
-    bottom: -70px;
-    &.show{
-        bottom: 0;
-    }
+@import "src/assets/scss/bootstrap/_functions.scss";
+@import "src/assets/scss/bootstrap/_variables.scss";
+
+.wrapper {
+  min-height: calc(100vh - 260px);
+  max-height: calc(100vh - 260px);
+  overflow-y: auto;
 }
 
-.grid-container {
-    min-height: calc(100vh - 230px);
-    max-height: calc(100vh - 230px);
-    display:grid;
-    grid-template-rows: auto 1fr;
-}
-
-.user-list{
-    min-height: calc(100vh - 268px);
-    max-height: calc(100vh - 268px);
-    display:grid;
-}
-
-.button-group {
-    display: grid;
-    grid-template-columns: auto auto;
-    column-gap: 20px;
-}
-
-.grid-header {
-    min-height: 40px;
-    max-height: 40px;
-}
-
-.modal-user-list{
-    min-height: 300px;
-    max-height: 400px;
-    overflow-y: auto;
-}
-.admin-icon-holder{
-    min-width: 16px;
-    max-width: 16px;
-    min-height: 16px;
-    max-height: 16px;
-}
-.name-wrapper{
-    min-width: 150px;
-    max-width: 150px;
+.sub-menu {
+  width: 200px;
 }
