--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -3,7 +3,7 @@
 @import "src/assets/scss/bootstrap/_variables.scss";
 
 @font-face {
-  font-family: "Inter";
+  font-family: "Lato";
   src: url("../fonts/default/Lato-Regular.woff") format("woff"),
     /* Pretty Modern Browsers */
     url("../fonts/default/Lato-Light.woff") format("woff"),
@@ -29,6 +29,84 @@
     url("../fonts/default/Lato-Bold.svg#svgFontName") format("svg");
   /* Legacy iOS */
 }
+
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-Medium.ttf") format("truetype");
+  font-weight: 450;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-SemiBold.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-Bold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-Black.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-ExtraBold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-ExtraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/inter/Inter-Thin.ttf") format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
+
+
+// @font-face {
+//   font-family: "Inter";
+//   src: url("../fonts/inter/Inter-Regular.ttf") format("truetype"),
+//     url("../fonts/inter/Inter-Medium.ttf") format("truetype"),
+//     url("../fonts/inter/Inter-SemiBold.ttf") format("truetype"),
+//     url("../fonts/inter/Inter-Bold.ttf") format("truetype"),
+//     url("../fonts/inter/Inter-Black.ttf") format("truetype"),
+//     url("../fonts/inter/Inter-ExtraBold.ttf") format("truetype"),
+//     url("../fonts/inter/Inter-ExtraLight.ttf") format("truetype"),
+//     url("../fonts/inter/Inter-Light.ttf") format("truetype"),
+//     url("../fonts/inter/Inter-Thin.ttf") format("truetype");
+// }
 
 // Hiding spinner on input of number
 /* For Firefox */
