font-weight fixed

--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-services/user-group-appcenter-services.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="ds-details py-2 px-3 w-100">
       <div class="admin-option d-flex align-items-center justify-content-between text-dark">
-        <strong>Admin Privileges</strong>
+        <span class="font-weight-bold">Admin Privileges</span>
         <div class="p-1">
           <odp-switch [edit]="{status:true}" [(checked)]="adminRole" (checkedChange)="toggleAdmin($event)">
           </odp-switch>
