--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-manage.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-manage.component.html
@@ -26,7 +26,7 @@
     <div class="d-flex flex-column px-4 pb-4">
       <div class="d-flex flex-column w-100 h-100 bg-white rounded border">
         <div
-          class="tabs-wrapper d-flex justify-content-between border-bottom text-uppercase text-muted font-weight-bolder font-13">
+          class="tabs-wrapper d-flex justify-content-between border-bottom text-uppercase text-muted font-weight-bold font-13">
           <div class="tabs d-flex align-items-center p-3">
             <div *ngIf="showAuthorTab" class="px-3 hover" (click)="activeTab=0"
               [ngClass]="{'text-accent':activeTab==0}">
