--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-groups/group-author-groups.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-groups/group-author-groups.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column groups-content w-100 p-4">
   <div class="top-bar d-flex align-items-center justify-content-between">
     <div class="w-100">
-      <h5 class="font-weight-bolder">Groups</h5>
+      <h5 class="font-weight-bold">Groups</h5>
     </div>
     <!-- <select name="permissions" id="permissions" class="all-permissions-selector custom-select"
       [ngModel]="globalPermission" (ngModelChange)="changeAllPermissions($event)">
