search box fixed

--- a/src/app/admin/app-list/app-list.component.html
+++ b/src/app/admin/app-list/app-list.component.html
@@ -21,6 +21,7 @@
       (enteredText)="searchTerm = $event"
       (reset)="searchTerm = ''"
       [selectOnEnter]="true"
+      open="true"
       (enteredPressed)="enterToSelect($event)"
     ></odp-search-box>
     <button
