--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter.component.html
@@ -1,18 +1,18 @@
 <div class="wrapper d-flex align-items-start">
   <div class="d-flex flex-column sub-menu p-3">
-    <div class="d-flex flex-column text-muted font-weight-bold font-14">
+    <div class="d-flex flex-column text-muted font-14">
       <div *ngIf="hasPermission('PVGCDS') || hasPermission('PMGCDS')" class="px-3 py-2 hover" (click)="activeSubTab=0"
-        [ngClass]="{'text-dark': activeSubTab==0}">
+        [ngClass]="{'text-dark font-weight-bold': activeSubTab==0}">
         <span class="">Data Services</span>
       </div>
-      <div *ngIf="hasPermission('PVGCI') || hasPermission('PMGCI')" class="px-3 py-2 hover" (click)="activeSubTab=1"
-        [ngClass]="{'text-dark': activeSubTab==1}">
+      <!-- <div *ngIf="hasPermission('PVGCI') || hasPermission('PMGCI')" class="px-3 py-2 hover" (click)="activeSubTab=1"
+        [ngClass]="{'text-dark font-weight-bold': activeSubTab==1}">
         <span class="">Interactions</span>
       </div>
       <div *ngIf="hasPermission('PVGCBM') || hasPermission('PMGCBM')" class="px-3 py-2 hover" (click)="activeSubTab=2"
-        [ngClass]="{'text-dark': activeSubTab==2}">
+        [ngClass]="{'text-dark font-weight-bold': activeSubTab==2}">
         <span class="">Bookmarks</span>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="px-3 w-100">
