--- a/src/app/utils/color-picker/color-picker.component.html
+++ b/src/app/utils/color-picker/color-picker.component.html
@@ -1,11 +1,14 @@
 <div class="bg-white palette">
   <div class="d-flex flex-column w-100">
     <div class="d-flex align-items-center justify-content-between pl-3">
-      <span class="text-muted">Pick a Color</span>
-      <span class="btn btn-link" (click)="cancel()">Cancel</span>
+      <!-- <span class="text-muted">Pick a Color</span>
+      <span class="btn btn-link" (click)="cancel()">Cancel</span> -->
     </div>
     <div class="d-flex flex-wrap">
-      <div class="color" *ngFor="let c of colors" [ngClass]="{'active':c==color}" [ngStyle]="getColorStyle(c)" (click)="selectColor(c)"></div>
+      <div class="color d-flex" *ngFor="let c of colors" [ngClass]="{'active':c==color}" [ngStyle]="getColorStyle(c)"
+        (click)="selectColor(c)">
+        <span *ngIf="selected === c" class="fa fa-check text-white m-auto"></span>
+      </div>
     </div>
   </div>
 </div>
